; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/libsas/extr_sas_expander.c_sas_expander_discover.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/libsas/extr_sas_expander.c_sas_expander_discover.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.domain_device = type { %struct.expander_device }
%struct.expander_device = type { i32, i32* }

@ENOMEM = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.domain_device*)* @sas_expander_discover to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sas_expander_discover(%struct.domain_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.domain_device*, align 8
  %4 = alloca %struct.expander_device*, align 8
  %5 = alloca i32, align 4
  store %struct.domain_device* %0, %struct.domain_device** %3, align 8
  %6 = load %struct.domain_device*, %struct.domain_device** %3, align 8
  %7 = getelementptr inbounds %struct.domain_device, %struct.domain_device* %6, i32 0, i32 0
  store %struct.expander_device* %7, %struct.expander_device** %4, align 8
  %8 = load i32, i32* @ENOMEM, align 4
  %9 = sub nsw i32 0, %8
  store i32 %9, i32* %5, align 4
  %10 = load %struct.expander_device*, %struct.expander_device** %4, align 8
  %11 = getelementptr inbounds %struct.expander_device, %struct.expander_device* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = sext i32 %12 to i64
  %14 = mul i64 4, %13
  %15 = trunc i64 %14 to i32
  %16 = load i32, i32* @GFP_KERNEL, align 4
  %17 = call i32* @kzalloc(i32 %15, i32 %16)
  %18 = load %struct.expander_device*, %struct.expander_device** %4, align 8
  %19 = getelementptr inbounds %struct.expander_device, %struct.expander_device* %18, i32 0, i32 1
  store i32* %17, i32** %19, align 8
  %20 = load %struct.expander_device*, %struct.expander_device** %4, align 8
  %21 = getelementptr inbounds %struct.expander_device, %struct.expander_device* %20, i32 0, i32 1
  %22 = load i32*, i32** %21, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %27, label %24

24:                                               ; preds = %1
  %25 = load i32, i32* @ENOMEM, align 4
  %26 = sub nsw i32 0, %25
  store i32 %26, i32* %2, align 4
  br label %42

27:                                               ; preds = %1
  %28 = load %struct.domain_device*, %struct.domain_device** %3, align 8
  %29 = call i32 @sas_ex_phy_discover(%struct.domain_device* %28, i32 -1)
  store i32 %29, i32* %5, align 4
  %30 = load i32, i32* %5, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %27
  br label %34

33:                                               ; preds = %27
  store i32 0, i32* %2, align 4
  br label %42

34:                                               ; preds = %32
  %35 = load %struct.expander_device*, %struct.expander_device** %4, align 8
  %36 = getelementptr inbounds %struct.expander_device, %struct.expander_device* %35, i32 0, i32 1
  %37 = load i32*, i32** %36, align 8
  %38 = call i32 @kfree(i32* %37)
  %39 = load %struct.expander_device*, %struct.expander_device** %4, align 8
  %40 = getelementptr inbounds %struct.expander_device, %struct.expander_device* %39, i32 0, i32 1
  store i32* null, i32** %40, align 8
  %41 = load i32, i32* %5, align 4
  store i32 %41, i32* %2, align 4
  br label %42

42:                                               ; preds = %34, %33, %24
  %43 = load i32, i32* %2, align 4
  ret i32 %43
}

declare dso_local i32* @kzalloc(i32, i32) #1

declare dso_local i32 @sas_ex_phy_discover(%struct.domain_device*, i32) #1

declare dso_local i32 @kfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
